# RAG

./: .gitignore  README.md  config.example.yaml  pyproject.toml  viking_router_flow.mmd
config/: ablation_profiles.yaml  viking_lexicon.yaml
data/: README.md
docs/diagrams/: rag_viking_pipeline.mmd  retrieval_harness.mmd
eval/: README.md  run_full_eval.sh
scripts/: build_pipeline_diagrams.py  run_ablation.py  run_final_b0_b7.sh  smoke_web_b7_runtime.py
src/: main.py  utils.py
src/agent/: chains.py  graph.py  nodes.py  service.py  state.py  visualize.py
src/eval/: README.md  build_finalize_summary.py  finalized_b7_runtime.py  materialized_language_split.py  metadata_store.py  metrics.py  profiles.py  query_topic_detection.py  run_ablation.py  run_retrieval_ablation.py
src/ingest/: run_ingest.sh  xsampa_converter.py
src/ingest/graph/: graph_ingest.py
src/llm/: factory.py  json_retry.py  rag_generate.py
src/obsolete/: README.md  main_graph_router_legacy.py
src/retrieve/: bm25_search.py  colpali_search.py  graph_search.py  language_cards.py  rag_retrieve.py  split_budget.py  viking_index.py  viking_lexicon_loader.py  viking_router.py
src/ui/: graph_web.py  model_options.py  runtime_config.py
tests/agent/: test_generation_timeout_and_scaling.py
tests/eval/: test_ablation_config_isolation.py
tests/retrieve/: test_language_parser_multilingual.py  test_regression_retrieval.py  test_safe_deserialize.py  test_sql_identifier_safety.py  test_vision_metadata_isolation.py  test_vision_stability.py
tests/utils/: test_config_override.py
(+10 files in other folders)
